--- a/package.json
+++ b/package.json
@@ -2,20 +2,19 @@
   "name": "qrcode",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "nodemon": "^1.11.0"
   },
   "devDependencies": {
-    "eslint": "^4.3.0",
+    "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.3.1",
     "eslint-plugin-import": "^2.7.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/nodemon/.bin/nodemon ./server/server.js"
+		"start": "node_modules/.bin/nodemon server/server.js"
   },
   "repository": {
     "type": "git",
