--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "nodemon": "^1.11.0"
   },
   "devDependencies": {
+    "chai": "^4.1.0",
+    "chai-http": "^3.0.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.3.1",
-    "eslint-plugin-import": "^2.7.0"
+    "eslint-plugin-import": "^2.7.0",
+    "mocha": "^3.5.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node_modules/.bin/nodemon server/server.js"
+    "test": "./node_modules/.bin/mocha",
+    "start": "node_modules/.bin/nodemon server/server.js"
   },
   "repository": {
     "type": "git",
