--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "dotenv": "^4.0.0",
     "express": "^4.15.3",
+    "mongoose": "^4.11.5",
     "nodemon": "^1.11.0",
+    "morgan": "^1.8.2",
     "uniqid": "^4.1.1"
   },
   "devDependencies": {
