--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mongoose": "^4.11.5",
     "morgan": "^1.8.2",
     "nodemon": "^1.11.0",
+    "qrcode-generator": "^1.3.1",
     "riot": "^3.6.1",
     "riot-route": "^3.1.2",
     "uniqid": "^4.1.1"
