--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   "dependencies": {
     "babel-core": "^6.25.0",
     "body-parser": "^1.17.2",
+    "bootstrap": "^3.3.7",
+    "bootstrap-social": "^5.1.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "jsonwebtoken": "^7.4.2",
+    "mdbootstrap": "^4.4.0",
     "mongoose": "^4.11.5",
     "morgan": "^1.8.2",
     "nodemon": "^1.11.0",
